added css, print options etc

--- a/content/docs/terminal/1.md
+++ b/content/docs/terminal/1.md
@@ -5,8 +5,4 @@ draft = true
 title = 'Introduction to Git - Page 1'
 +++
 
-Wir initialisieren ein neues repository mit:
-
-{{< highlight bash >}}
-> git init
-{{< /highlight >}}
+Content Page 1
