Basic css, started intro

--- a/content/docs/terminal/1.md
+++ b/content/docs/terminal/1.md
@@ -2,7 +2,7 @@
 date = '2024-10-28T18:12:26+01:00'
 page = 1
 draft = true
-title = 'Introduction to Git - Page 1'
+title = 'Introduction to Terminal - Page 1'
 +++
 
 Content Page 1
